# ssm-tui

./: Cargo.toml  README.md
.github/workflows/: cargo.yml
src/: app.rs  main.rs  tui.rs  ui.rs  update.rs
src/app/aws/: mod.rs  parameter_store.rs  test.rs
src/app/ps_list_filter/: mod.rs  user_input.rs
src/aws/: mod.rs
src/ui/ui_block/: details.rs  metadata.rs  mod.rs  modified_user.rs  ps_list.rs  search.rs  user_info.rs
wix/: main.wxs
